--- a/src/template/pages/blog.pug
+++ b/src/template/pages/blog.pug
@@ -32,31 +32,43 @@ block content
         .double-triagle
             svg.double-triagle__svg(width='100%' height='100%')
                 use(xlink:href=`images/icons/sprite.svg#bg`)
-        .blog-left.active
+        .blog-left
             .blog-left__circle
             ul.blog-nav
-                li.blog-nav__item.active_a
-                    a.blog-nav__link(href="#") Самое важное в SASS
+                li.blog-nav__item.blog-left-active
+                    a.blog-nav__link(href="#" data-scroll='1') Самое важное в SASS
                 li.blog-nav__item
-                    a.blog-nav__link(href="#") Приёмы в вёрстке, без которых не обходится ни один сайт
+                    a.blog-nav__link(href="#" data-scroll='2') Приёмы в вёрстке, без которых не обходится ни один сайт
                 li.blog-nav__item
-                    a.blog-nav__link(href="#") Самый необходимый набор Gulp плагинов
+                    a.blog-nav__link(href="#" data-scroll='3') Самый необходимый набор Gulp плагинов
                 li.blog-nav__item
-                    a.blog-nav__link(href="#") Почему я выбрал Jade
+                    a.blog-nav__link(href="#" data-scroll='4') Почему я выбрал Jade
 
         .blog-right
-            .article
+            .article(data-anchor='1')
                .article__title Самое важное в SASS
                .article__date 22 ноября 2018
                .article__text
                     p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
                     p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
-            .article
+            .article(data-anchor='2')
                 .article__title Приёмы в вёрстке, без которых не обходится ни один сайт
                 .article__date 22 ноября 2018
                 .article__text
                         p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
                         p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
+            .article(data-anchor='3')
+                .article__title Самый необходимый набор Gulp плагинов
+                .article__date 22 ноября 2018
+                .article__text
+                    p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
+                    p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
+            .article(data-anchor='4')
+                .article__title Почему я выбрал Jade
+                .article__date 22 ноября 2018
+                .article__text
+                    p Таким образом начало повседневной работы по формированию позиции позволяет выполнять важные задания по разработке направлений прогрессивного развития. Разнообразный и богатый опыт новая модель организационной деятельности играет важную роль в формировании новых предложений. Товарищи! новая модель организационной деятельности играет важную роль в формировании систем массового участия.
+                    p Не следует, однако забывать, что укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании систем массового участия. Идейные соображения высшего порядка, а также рамки и место обучения кадров обеспечивает широкому кругу (специалистов) участие в формировании позиций, занимаемых участниками в отношении поставленных задач. Товарищи! постоянный количественный рост и сфера нашей активности способствует подготовки и реализации модели развития. С другой стороны рамки и место обучения кадров влечет за собой процесс внедрения и модернизации системы обучения кадров, соответствует насущным потребностям.
     footer.footer
         .footer__top
             .footer__col.footer__col--left
