--- a/src/template/pages/work.pug
+++ b/src/template/pages/work.pug
@@ -36,7 +36,7 @@ block content
             .hero__substrate
                 .main__title Мои работы
                     .title-star
-                        svg.title-star__svg(width='100' height='100')
+                        svg.title-star__svg.title-star__svg-white(width='100' height='100')
                             use(xlink:href=`images/icons/sprite.svg#stars2`)
                 svg.hero__substrate_svg(width='100%' height='100%' preserveAspectRatio="none")
                     use(xlink:href=`images/icons/sprite.svg#bg`)
@@ -80,7 +80,7 @@ block content
             .wrapper-block
                 .main__title Что обо мне говорят
                     .title-star
-                        svg.title-star__svg(width='100' height='100')
+                        svg.title-star__svg.title-star__svg-white(width='100' height='100')
                             use(xlink:href=`images/icons/sprite.svg#stars3`)
                 .feed-block
                     .feed-block__item
