--- a/src/template/loyout.pug
+++ b/src/template/loyout.pug
@@ -10,7 +10,7 @@ html(lang='ru')
         title #{title}
         link(rel='stylesheet', href='styles/main.min.css')
     body
-        //include section/preloader.pug
+        //- include section/preloader.pug
         block content
 
         include section/hamburger.pug
