--- a/src/template/section/preloader.pug
+++ b/src/template/section/preloader.pug
@@ -1,3 +1,3 @@
-.preloader#page-preloader
-    .loader
-        span.load-perc 0%
+//- .preloader#page-preloader
+//-     .loader
+//-         span.load-perc 0%
